<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".AccountActivity">


...
                android:backgroundTint="?attr/colorTertiary"
                app:circularflow_defaultRadius="100dp"
                app:circularflow_radiusInDP="100dp"
                app:cornerRadius="100dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/messagesButton"
                app:layout_constraintStart_toEndOf="@+id/homeButton"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/createPostButton"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="?attr/colorTertiary"
                app:circularflow_defaultRadius="100dp"
                app:circularflow_radiusInDP="100dp"
                app:cornerRadius="100dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/homeButton"
                app:layout_constraintStart_toEndOf="@+id/accountButton"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/accountButton"
                android:layout_width="50dp"
                android:layout_height="60dp"
...
                app:srcCompat="@drawable/create_post_icon" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/GreetingText"
        android:layout_width="302dp"
        android:layout_height="138dp"
        android:textAlignment="center"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
...

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profilePicture"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/account_icon"
        app:layout_constraintBottom_toTopOf="@+id/myPostsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="192dp"
        android:layout_height="46dp"
        android:layout_marginBottom="92dp"
        android:backgroundTint="?attr/colorSecondary"
        android:text="Settings"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userListButton"
        app:layout_constraintVertical_bias="0.161" />

    <Button
        android:id="@+id/userListButton"
        android:layout_width="194dp"
        android:layout_height="46dp"
...
        android:backgroundTint="?attr/colorSecondary"
        android:text="Followers"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/followingBtn"
        app:layout_constraintVertical_bias="0.191" />

    <Button
        android:id="@+id/myPostsButton"
        android:layout_width="192dp"
        android:layout_height="47dp"
...
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GreetingText"
        app:layout_constraintVertical_bias="0.19" />

    <Button
        android:id="@+id/editProfilePicButton"
        android:layout_width="163dp"
        android:layout_height="41dp"
        android:backgroundTint="?attr/colorSecondary"
        android:text="Edit Profile Pic"
        app:layout_constraintBottom_toTopOf="@+id/myPostsButton"
        app:layout_constraintEnd_toEndOf="parent"
...
