<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".SettingsActivity">


...
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary"
            android:backgroundTint="?attr/colorPrimary"></androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <Button
        android:id="@+id/usernameChangeButton"
        android:layout_width="215dp"
        android:layout_height="41dp"
        android:backgroundTint="?attr/colorSecondary"
        android:text="Change username"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.222" />

    <Button
        android:id="@+id/changePasswordButton"
        android:layout_width="218dp"
        android:layout_height="38dp"
        android:backgroundTint="?attr/colorSecondary"
        android:text="Change password"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
...
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.667" />

    <EditText
        android:id="@+id/changeUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="new username"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/usernameChangeButton"
...
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.795" />

    <EditText
        android:id="@+id/changePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="new password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/changePasswordButton"
...
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changePasswordButton"
        app:layout_constraintVertical_bias="0.58" />

    <Button
        android:id="@+id/backButton6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorSecondary"
        android:text="Back"
        app:layout_constraintBottom_toTopOf="@+id/changeUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.034"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.615" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="196dp"
        android:layout_height="46dp"
        android:backgroundTint="?attr/colorSecondary"
        android:text="Log out"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteAccountButton"
        app:layout_constraintVertical_bias="0.745" />

    <Button
        android:id="@+id/changeThemeButton"
        android:layout_width="212dp"
        android:layout_height="48dp"
        android:backgroundTint="?attr/colorSecondary"
        android:text="Change Theme"
        app:layout_constraintBottom_toTopOf="@+id/logoutButton"
        app:layout_constraintEnd_toEndOf="parent"
...
