package java.frontend.findfiesta;


import androidx.test.InstrumentationRegistry;
import androidx.test.core.app.ActivityScenario;
import androidx.test.espresso.Espresso;
import androidx.test.espresso.UiController;
import androidx.test.espresso.ViewAction;
import androidx.test.espresso.action.ViewActions;
import androidx.test.espresso.matcher.ViewMatchers;
import androidx.test.ext.junit.rules.ActivityScenarioRule;
import androidx.test.filters.LargeTest;
import androidx.test.internal.runner.junit4.AndroidJUnit4ClassRunner;
import androidx.test.rule.ActivityTestRule;

import static androidx.test.espresso.Espresso.onData;
import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.clearText;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.closeSoftKeyboard;
import static androidx.test.espresso.action.ViewActions.typeText;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.intent.Intents.intending;
import static androidx.test.espresso.intent.matcher.IntentMatchers.toPackage;
import static androidx.test.espresso.matcher.ViewMatchers.isAssignableFrom;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.CoreMatchers.allOf;
import static org.hamcrest.CoreMatchers.anything;
import static org.hamcrest.CoreMatchers.containsString;
import static org.hamcrest.CoreMatchers.is;
import static org.hamcrest.Matchers.hasToString;
import static org.hamcrest.core.StringEndsWith.endsWith;
import static org.hamcrest.core.StringStartsWith.startsWith;
import static org.junit.Assert.assertEquals;

import android.app.Activity;
import android.app.Instrumentation;
import android.content.Intent;
import android.graphics.Bitmap;
import android.graphics.BitmapFactory;
import android.view.LayoutInflater;
import android.view.View;
import android.widget.SearchView;

import junit.framework.TestCase;

import org.hamcrest.Matcher;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import java.frontend.findfiesta.databinding.ActivityAccountBinding;

@RunWith(AndroidJUnit4ClassRunner.class)
@LargeTest
public class KaitlynSystemTest {


    private static final int SIMULATED_DELAY_MS = 500;

    @Rule   // needed to launch the activity
    public ActivityTestRule<LoginActivity> activityRule = new ActivityTestRule<>(LoginActivity.class);

    @Rule
    public ActivityScenarioRule<AccountActivity> activityScenarioRule = new ActivityScenarioRule<>(AccountActivity.class);


//    binding test 1 (accounts)

    @Test
    public void accountBindingTest(){
        // Inflate the layout using ActivityScenario
        ActivityScenario<AccountActivity> activityScenario = activityScenarioRule.getScenario();
        activityScenario.onActivity(activity -> {
            View view = LayoutInflater.from(activity).inflate(R.layout.activity_account, null);

            // Bind views using generated binding class
            ActivityAccountBinding binding = ActivityAccountBinding.bind(view);

        });
    }

//    account settings tests

    /**
     * tests the users ability to change their theme
     */
    @Test
    public void changeThemeSetting(){

//        login
        String testEmailString = "khoyme@outlook.com";
        String testPasswordString = "password1";

        // Type in testString and send request
        onView(withId(R.id.editTextTextEmailAddress))
                .perform(typeText(testEmailString), closeSoftKeyboard());
        onView(withId(R.id.editTextTextPassword)).perform(typeText(testPasswordString), closeSoftKeyboard());
//       click login button
        onView(withId(R.id.loginButton2)).perform(click());

        // Put thread to sleep to allow volley to handle the request
        try {
            Thread.sleep(SIMULATED_DELAY_MS);
        } catch (InterruptedException e) {
        }

        onView(withId(R.id.accountButton)).perform(click());
//        check it switches to account page
        onView(withId(R.id.activity_account)).check(matches(isDisplayed()));
//        click settings button
        onView(withId(R.id.settingsButton)).perform(click());
        try {
            Thread.sleep(SIMULATED_DELAY_MS);
        } catch (InterruptedException e) {
        }

//      check it switches to settings page
        onView(withId(R.id.activity_settings)).check(matches(isDisplayed()));

//        check the change theme button
        onView(withId(R.id.changeThemeButton)).perform(click());
        try {
            Thread.sleep(SIMULATED_DELAY_MS);
        } catch (InterruptedException e) {
        }
//        check that the screen changes to change theme page
        onView(withId(R.id.activity_changetheme)).check(matches(isDisplayed()));
//        click green theme button
        onView(withId(R.id.greenThemeButton)).perform(click());
//        check if the users theme
        int themeID = Actor.getCurrentTheme();
//        onView(withId(R.id.activity_changetheme)).check();
//      check that the actors current theme changed to green
        assertEquals(Actor.getCurrentTheme(), 2131820634);

//        click the pink theme button
        onView(withId(R.id.pinkThemeButton)).perform(click());
//        check the actors current theme is pink
        assertEquals(Actor.getCurrentTheme(), 2131820666);

//        click the main theme button
        onView(withId(R.id.mainThemeButton)).perform(click());
//        check the actors current theme is main
        assertEquals(Actor.getCurrentTheme(), 2131820633);

//        check the back button
        onView(withId(R.id.backButton11)).perform(click());
//        check the screen changed back to settings
        onView(withId(R.id.activity_settings)).check(matches(isDisplayed()));

    }
    //
    @Test
    public void changePassword(){

//        login
        String testEmailString = "khoyme@outlook.com";
        String testPasswordString = "password1";

        // Type in testString and send request
        onView(withId(R.id.editTextTextEmailAddress))
                .perform(typeText(testEmailString), closeSoftKeyboard());
        onView(withId(R.id.editTextTextPassword)).perform(typeText(testPasswordString), closeSoftKeyboard());
//       click login button
        onView(withId(R.id.loginButton2)).perform(click());

        // Put thread to sleep to allow volley to handle the request
        try {
            Thread.sleep(SIMULATED_DELAY_MS);
        } catch (InterruptedException e) {
        }

        onView(withId(R.id.accountButton)).perform(click());
//        check it switches to account page
        onView(withId(R.id.activity_account)).check(matches(isDisplayed()));
//        click settings button
        onView(withId(R.id.settingsButton)).perform(click());
        try {
            Thread.sleep(SIMULATED_DELAY_MS);
        } catch (InterruptedException e) {
        }

//      check it switches to settings page
        onView(withId(R.id.activity_settings)).check(matches(isDisplayed()));

        String oldPassword = Actor.getCurrentPassword();
        String newPassword = "NewPassword1";
//      type out the new password
        onView(withId(R.id.changePassword)).perform(typeText(newPassword), closeSoftKeyboard());
        onView(withId(R.id.changePassword)).perform(clearText());
        onView(withId(R.id.changePassword)).perform(typeText("NewPassword1"), closeSoftKeyboard());
//        click change password button
        onView(withId(R.id.changePasswordButton)).perform(click());
//        check that the actors new current password equals the new password
        assertEquals(Actor.getCurrentPassword(), newPassword);

//        change the password back to the old password
//        delete textView text
        onView(withId(R.id.changePassword)).perform(clearText());
        //      type out the new password
        onView(withId(R.id.changePassword)).perform(typeText(oldPassword), closeSoftKeyboard());
//        click change password button
        onView(withId(R.id.changePasswordButton)).perform(click());
//        check that the actors new current password equals the new password
        assertEquals(Actor.getCurrentPassword(), oldPassword);



    }


    @Test
    public void changeUsername(){

//        login
        String testEmailString = "khoyme@outlook.com";
        String testPasswordString = "password1";

        // Type in testString and send request
        onView(withId(R.id.editTextTextEmailAddress))
                .perform(typeText(testEmailString), closeSoftKeyboard());
        onView(withId(R.id.editTextTextPassword)).perform(typeText(testPasswordString), closeSoftKeyboard());
//       click login button
        onView(withId(R.id.loginButton2)).perform(click());

        // Put thread to sleep to allow volley to handle the request
        try {
            Thread.sleep(SIMULATED_DELAY_MS);
        } catch (InterruptedException e) {
        }

        onView(withId(R.id.accountButton)).perform(click());
//        check it switches to account page
        onView(withId(R.id.activity_account)).check(matches(isDisplayed()));
//        click settings button
        onView(withId(R.id.settingsButton)).perform(click());
        try {
            Thread.sleep(SIMULATED_DELAY_MS);
        } catch (InterruptedException e) {
        }

//      check it switches to settings page
        onView(withId(R.id.activity_settings)).check(matches(isDisplayed()));

        String oldUsername = Actor.getCurrentUsername();
        String newUsername = "newUsername";
//      type out the new password
        onView(withId(R.id.changeUsername)).perform(typeText(newUsername), closeSoftKeyboard());
//        click change username button
        onView(withId(R.id.usernameChangeButton)).perform(click());
//        check that the actors new current username equals the new password
        assertEquals(Actor.getCurrentUsername(), newUsername);

//        check the back button
        onView(withId(R.id.backButton6)).perform(click());
//        check it goes back to the account page
        onView(withId(R.id.activity_account)).check(matches(isDisplayed()));
        //        check the account page has the new username
        onView(withId(R.id.GreetingText)).check(matches(withText(endsWith(newUsername))));
//       go back to settings page
        onView(withId(R.id.settingsButton)).perform(click());

//        change the username back to the old username
//        delete textView text
        onView(withId(R.id.changeUsername)).perform(clearText());
        //      type out the new username
        onView(withId(R.id.changeUsername)).perform(typeText(oldUsername), closeSoftKeyboard());
//        click change username button
        onView(withId(R.id.usernameChangeButton)).perform(click());
//        check that the actors new current username equals the new username
        assertEquals(Actor.getCurrentUsername(), oldUsername);

    }

    @Test
    public void logOut(){
//        login
        String testEmailString = "khoyme@outlook.com";
        String testPasswordString = "password1";

        // Type in testString and send request
        onView(withId(R.id.editTextTextEmailAddress))
                .perform(typeText(testEmailString), closeSoftKeyboard());
        onView(withId(R.id.editTextTextPassword)).perform(typeText(testPasswordString), closeSoftKeyboard());
//       click login button
        onView(withId(R.id.loginButton2)).perform(click());

        // Put thread to sleep to allow volley to handle the request
        try {
            Thread.sleep(SIMULATED_DELAY_MS);
        } catch (InterruptedException e) {
        }


        onView(withId(R.id.accountButton)).perform(click());
//        check it switches to account page
        onView(withId(R.id.activity_account)).check(matches(isDisplayed()));
//        click settings button
        onView(withId(R.id.settingsButton)).perform(click());
        try {
            Thread.sleep(SIMULATED_DELAY_MS);
        } catch (InterruptedException e) {
        }

//      check it switches to settings page
        onView(withId(R.id.activity_settings)).check(matches(isDisplayed()));

//        clicks the logout button
        onView(withId(R.id.logoutButton)).perform(click());

//        check the login screen displays and current user is null
        onView(withId(R.id.activity_login)).check(matches(isDisplayed()));
        assertEquals(Actor.getCurrentUsername(), null);

    }


//    account tests

    @Test
    public void myPosts() {

//        login
        String testEmailString = "khoyme@outlook.com";
        String testPasswordString = "password1";
//        String resultString = "olleh";

        // Type in testString and send request
        onView(withId(R.id.editTextTextEmailAddress))
                .perform(typeText(testEmailString), closeSoftKeyboard());
        onView(withId(R.id.editTextTextPassword)).perform(typeText(testPasswordString), closeSoftKeyboard());
//       click login button
        onView(withId(R.id.loginButton2)).perform(click());

        // Put thread to sleep to allow volley to handle the request
        try {
            Thread.sleep(SIMULATED_DELAY_MS);
        } catch (InterruptedException e) {
        }

        onView(withId(R.id.accountButton)).perform(click());
//        check it switches to account page
        onView(withId(R.id.activity_account)).check(matches(isDisplayed()));

//        check it goes to myposts page
        onView(withId(R.id.myPostsButton)).perform(click());
        onView(withId(R.id.activity_myposts)).check(matches(isDisplayed()));
//        check back button
        onView(withId(R.id.backButton4)).perform(click());
        onView(withId(R.id.activity_account)).check(matches(isDisplayed()));
    }

    @Test
    public void followers() {
//        login
        String testEmailString = "khoyme@outlook.com";
        String testPasswordString = "password1";

        // Type in testString and send request
        onView(withId(R.id.editTextTextEmailAddress))
                .perform(typeText(testEmailString), closeSoftKeyboard());
        onView(withId(R.id.editTextTextPassword)).perform(typeText(testPasswordString), closeSoftKeyboard());
//       click login button
        onView(withId(R.id.loginButton2)).perform(click());

        // Put thread to sleep to allow volley to handle the request
        try {
            Thread.sleep(SIMULATED_DELAY_MS);
        } catch (InterruptedException e) {
        }

        onView(withId(R.id.accountButton)).perform(click());
//        check it switches to account page
        onView(withId(R.id.activity_account)).check(matches(isDisplayed()));

//        click followers button
        onView(withId(R.id.userListButton)).perform(click());
//        check it goes to following page
        onView(withId(R.id.activity_myfollowers)).check(matches(isDisplayed()));
//        check chrisMoseley follows khoyme
//        onView(withId(R.id.myFollowingList)).check()
        onData(hasToString(containsString("chrisMoseley")))
                .inAdapterView(withId(R.id.myFollowersList))
                .check(matches(isDisplayed()));

        //        test back button
        onView(withId(R.id.backButton5)).perform(click());
        onView(withId(R.id.activity_account)).check(matches(isDisplayed()));
        onView(withId(R.id.accountButton)).perform(click());
        onView(withId(R.id.createPostButton)).perform(click());
        onView(withId(R.id.accountButton)).perform(click());
        onView(withId(R.id.homeButton)).perform(click());
        onView(withId(R.id.accountButton)).perform(click());

        onView(withId(R.id.userListButton)).perform(click());
        onData(hasToString(containsString("chrisMoseley")))
                .inAdapterView(withId(R.id.myFollowersList))
                .perform(click());
//        screen isnt' supposed to change yet
//        onView(withId(R.id.activity_otheruser)).check(matches(isDisplayed()));

    }

    @Test
    public void following() {
        //        login
        String testEmailString = "khoyme@outlook.com";
        String testPasswordString = "password1";

        // Type in testString and send request
        onView(withId(R.id.editTextTextEmailAddress))
                .perform(typeText(testEmailString), closeSoftKeyboard());
        onView(withId(R.id.editTextTextPassword)).perform(typeText(testPasswordString), closeSoftKeyboard());
//       click login button
        onView(withId(R.id.loginButton2)).perform(click());

        // Put thread to sleep to allow volley to handle the request
        try {
            Thread.sleep(SIMULATED_DELAY_MS);
        } catch (InterruptedException e) {
        }

        onView(withId(R.id.accountButton)).perform(click());
//        check it switches to account page
        onView(withId(R.id.activity_account)).check(matches(isDisplayed()));

//        click following button, make sure it goes to following page
        onView(withId(R.id.followingBtn)).perform(click());
        onView(withId(R.id.activity_myfollowing)).check(matches(isDisplayed()));

        onData(hasToString(containsString("hehe")))
                .inAdapterView(withId(R.id.myFollowingList))
                .check(matches(isDisplayed()));

///     check recommended followers pops up
        onView(withId(R.id.recFollowList)).check(matches(isDisplayed()));
        // Click on the first item in the list
        onData(anything())
                .inAdapterView(withId(R.id.recFollowList))
                .atPosition(0)
                .perform(click());
        // Put thread to sleep to allow volley to handle the request
        try {
            Thread.sleep(SIMULATED_DELAY_MS);
        } catch (InterruptedException e) {
        }
        onView(withId(R.id.activity_otheruser)).check(matches(isDisplayed()));
        onView(withId(R.id.backButton3)).perform(click());
        onView(withId(R.id.backButton)).perform(click());
//        onView(withId(R.id.accountButton));
        onView(withId(R.id.followingBtn)).perform(click());

//        not test the content of rec followers right now as its somewhat randomized
//        test back button
        onView(withId(R.id.backButton)).perform(click());
        onView(withId(R.id.activity_account)).check(matches(isDisplayed()));

        onView(withId(R.id.followingBtn)).perform(click());
        onView(withId(R.id.activity_myfollowing)).check(matches(isDisplayed()));
        onData(hasToString(containsString("hehe")))
                .inAdapterView(withId(R.id.myFollowingList))
                .perform(click());
//        screen actually isn't supposed to change
//        onView(withId(R.id.activity_otheruser)).check(matches(isDisplayed()));
    }

    //    camerainstrumentation tests
    @Test
    public void validateCamera() {

//        login go to page
//
        // Type in testString and send request
        onView(withId(R.id.editTextTextEmailAddress))
                .perform(typeText("khoyme@outlook.com"), closeSoftKeyboard());
        onView(withId(R.id.editTextTextPassword)).perform(typeText("password1"), closeSoftKeyboard());
//       click login button
        onView(withId(R.id.loginButton2)).perform(click());

        // Put thread to sleep to allow volley to handle the request
        try {
            Thread.sleep(SIMULATED_DELAY_MS);
        } catch (InterruptedException e) {
        }
        onView(withId(R.id.accountButton)).perform(click());
        onView(withId(R.id.editProfilePicButton)).perform(click());

        // Create a bitmap we can use for our simulated camera image
        Bitmap icon = BitmapFactory.decodeResource(
                InstrumentationRegistry.getTargetContext().getResources(),
                R.mipmap.ic_launcher);

        // Build a result to return from the Camera app
        Intent resultData = new Intent();
        resultData.putExtra("data", icon);
        Instrumentation.ActivityResult result = new Instrumentation.ActivityResult(Activity.RESULT_OK, resultData);

        // Stub out the Camera. When an intent is sent to the Camera, this tells Espresso to respond
        // with the ActivityResult we just created
//        intending(toPackage("com.android.camera2")).respondWith(result);

        // Verify that the camera intent is sent with the correct action and package
//        intending(allOf(hasAction(MediaStore.ACTION_IMAGE_CAPTURE), toPackage("com.android.camera")));

        // Now that we have the stub in place, click on the button in our app that launches into the Camera
//        onView(withId(R.id.CameraBtn2)).perform(click());

//

        // We can also validate that an intent resolving to the "camera" activity has been sent out by our app
//        intended(toPackage("com.android.camera2"));


//        Set the captured photo in the ImageView
//        intentsRule.getActivity().runOnUiThread(() -> intentsRule.getActivity().profilePic.setImageDrawable(Drawable.createFromPath("drawable/account_icon.png")));

        // Verify that the intent contains the simulated camera image data
//        intending(hasExtra("data", icon));

        // ... additional test steps and validation ...

//        take photo?
    }

    @Test
    public void validateCameraRoll() {

//        login go to page
//
        // Type in testString and send request
        onView(withId(R.id.editTextTextEmailAddress))
                .perform(typeText("khoyme@outlook.com"), closeSoftKeyboard());
        onView(withId(R.id.editTextTextPassword)).perform(typeText("password1"), closeSoftKeyboard());
//       click login button
        onView(withId(R.id.loginButton2)).perform(click());

        // Put thread to sleep to allow volley to handle the request
        try {
            Thread.sleep(SIMULATED_DELAY_MS);
        } catch (InterruptedException e) {
        }
        onView(withId(R.id.accountButton)).perform(click());
        onView(withId(R.id.editProfilePicButton)).perform(click());

        // Create a bitmap we can use for our simulated camera image
        Bitmap icon = BitmapFactory.decodeResource(
                InstrumentationRegistry.getTargetContext().getResources(),
                R.mipmap.ic_launcher);

        // Build a result to return from the Camera app
        Intent resultData = new Intent();
        resultData.putExtra("data", icon);
        Instrumentation.ActivityResult result = new Instrumentation.ActivityResult(Activity.RESULT_OK, resultData);

        // Stub out the Camera. When an intent is sent to the Camera, this tells Espresso to respond
        // with the ActivityResult we just created
//        intending(toPackage("com.android.camera2")).respondWith(result);

        // Now that we have the stub in place, click on the button in our app that launches into the Camera
        onView(withId(R.id.selectBtn)).perform(click());

        // We can also validate that an intent resolving to the "camera" activity has been sent out by our app
//        intended(toPackage("com.android.camera2"));

        // ... additional test steps and validation ...

    }

    @Test
    public void validateDeletePic() {

//        login go to page
//
        // Type in testString and send request
        onView(withId(R.id.editTextTextEmailAddress))
                .perform(typeText("khoyme@outlook.com"), closeSoftKeyboard());
        onView(withId(R.id.editTextTextPassword)).perform(typeText("password1"), closeSoftKeyboard());
//       click login button
        onView(withId(R.id.loginButton2)).perform(click());

        // Put thread to sleep to allow volley to handle the request
        try {
            Thread.sleep(SIMULATED_DELAY_MS);
        } catch (InterruptedException e) {
        }
